# interesting_algorithm

./: .gitignore  CMakeLists.txt  README.md
FFmpegCode/: CMakeLists.txt  main.c
FFmpegCode/FFmpegAPI/includes/libavcodec/: avcodec.h
FFmpegCode/FFmpegAPI/includes/libavdevice/: avdevice.h
FFmpegCode/FFmpegAPI/includes/libavfilter/: avfilter.h
FFmpegCode/FFmpegAPI/includes/libavformat/: avformat.h
FFmpegCode/FFmpegAPI/includes/libavutil/: avconfig.h  avutil.h
FFmpegCode/FFmpegAPI/includes/libpostproc/: postprocess.h
FFmpegCode/FFmpegAPI/includes/libswresample/: swresample.h
FFmpegCode/FFmpegAPI/includes/libswscale/: swscale.h
HelloWorldC/: 14.custom_include_file.c
HelloWorldC/tinycthread/: tinycthread.c
